# fidelipy

./: .readthedocs.yaml  CHANGELOG.md  CHANGELOG.txt  README.md  setup.cfg
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/adrs/: accept-string-arguments.md  minimize-input-validation.md  propagate-exceptions.md
src/: main.py  script1.py
src/fidelipy/: __init__.py  _strings.py
src/scripts/: getBalance.py  getQuote.py  login.py  script.py
