[metadata]
author = Darik Harter
author_email = darik.harter@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment
description = Semi-automated trading on fidelity.com
keywords = api, fidelity, playwright, selenium
license = Apache License, Version 2.0
long_description = file: README.md
long_description_content_type = text/markdown
name = fidelipy
url = https://github.com/qnevx/fidelipy
version = 2.0.0

[options]
install_requires =
    playwright >= 1.18.1, < 2
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.package_data]
fidelipy = py.typed

[options.packages.find]
where = src
